# ChangeLog for app-backup/rsnapshot
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/rsnapshot/ChangeLog,v 1.39 2014/06/19 12:24:18 klausman Exp $

  19 Jun 2014; Tobias Klausmann <klausman@gentoo.org>
  rsnapshot-1.3.1-r2.ebuild:
  Keyworded on alpha, bug #467160

  16 Jan 2014; Lars Wendler <polynomial-c@gentoo.org>
  rsnapshot-1.3.1-r1.ebuild, rsnapshot-1.3.1-r2.ebuild,
  +files/rsnapshot-1.3.1-perl518.patch:
  Fixed compilation with >=perl-5.18. Thanks to Chris Smith who reported this
  in bug #490486. Converted PATCHES array to src_prepare() function.

  11 Jul 2013; Vicente Olivert Riera <vincent@gentoo.org>
  rsnapshot-1.3.1-r2.ebuild:
  ppc, ppc64 keywords added, bug 467160

*rsnapshot-1.3.1-r2 (25 Apr 2013)

  25 Apr 2013; Justin Lecher <jlec@gentoo.org> +rsnapshot-1.3.1-r2.ebuild:
  Add dev-perl/Lchown as dep, #342643

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  18 Apr 2012; Jeremy Olexa <darkside@gentoo.org> rsnapshot-1.3.1-r1.ebuild:
  stabilize for all based on minor revision bump (doc location, other
  cosmetics)

  27 May 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  rsnapshot-1.3.1-r1.ebuild:
  Bump EAPI to 4; change installation of documentation so that dodoc is not
  used on a directory.

  13 Oct 2010; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Remove myself from metadata.xml

*rsnapshot-1.3.1-r1 (10 Oct 2010)

  10 Oct 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +rsnapshot-1.3.1-r1.ebuild, metadata.xml:
  Add myself to the package's maintainers. Add new revision fixing bug
  #300974 by Jochen Schalanda, installing the Perl utility files. Also
  update elog, and move the template configuration file among the
  documentation rather than in protected /etc. Update to EAPI=2.

  14 Jun 2010; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Taking over maintainership
