@@ -5,14 +5,16 @@ AUX rsnapshot-1.3.1-cp_al.patch 535 SHA256 a20a3b23d19c657e8cda47fd7f755bd5c9386
 AUX rsnapshot-1.3.1-perl518.patch 349 SHA256 3a024e5daff20b1e0b78462a9d5194f4f3fd71fb3217fd261dbf070745c9880f SHA512 5e4d43b814b0ade9743a08da0c580b6bb98673aa39127d2dd6fa0993d4b7a6ac163deff5f1ebd9fbf4c95434ef10f4c48d8f55967e1f78866563bcbaaa9d45a0 WHIRLPOOL bdba4241e644b25c2b1be406ae7b41409b80f720999c8a755a6e748d8ddedeb6db17d130bfcc5afc0d2a81262a32ae96e2d8f37f29de14ca372053a93063fce9
 DIST rsnapshot-1.3.1.tar.gz 215806 SHA256 94b6c77e40628935f42a191bdc28ad93b1f132fde456ee76ee87763f1eddc75e SHA512 a74ad0a21d213dd2e05cb577a47c491af90d8994df8f5a154195515345da438ac9c0d72b563aa02314883a0b3bb86e3c23f8b530a7078c2b55a9547a2d666c10 WHIRLPOOL 1d62658e11cbd2612b223336b5e3dbb44d1ec0b40a434bf8f65c09ff7b45c831f585046f8ef4e2ff79f034de8731435ccd2554e0d5ff4e2d1693a01b66113b00
 EBUILD rsnapshot-1.3.1-r1.ebuild 1331 SHA256 78ebe4d3fd6a779146865e4ae5665b998544db9b095e5e856c088ed25097dd58 SHA512 288e30cc7fd442cd03f3bf68040a20b51723f179a1db5a23c9d40d7bf1502f7608898b9c9f39eaa745e5bd9325ef084318be62e704a59344e62fc3da7f63bd74 WHIRLPOOL a3b9de309f38a9e434806126e96bde8db73dc1e5d9cb635ee5955de0a36a9b632d51f25e8a76c5873560c2c177d4285a1e21d35e75b977dcd71e13681c5de6a4
-EBUILD rsnapshot-1.3.1-r2.ebuild 1370 SHA256 1fbcf2593dab8eb7d07aaee56c1ffce56ebeb51f0d0c3030f25ebb04789f15d7 SHA512 8e5bdb73d4cb2bf36ef8db0cba49f1b1c5fd67cf5b4f39f1196f9e2043ab18c686b2903a6d4c649accc6dc716f209d9de4a336a135e5395100b0733d7ce84fc9 WHIRLPOOL e6de9f00fd79703487df910109b78b7b19989c7616e12d2e06a26fa058bd9f73a7f9d245f44fa9f68b6e0c350c625b0ea8bf61f72313195b746d5674771349ac
+EBUILD rsnapshot-1.3.1-r2.ebuild 1376 SHA256 5d2689082cabab28cac04fd0131134eae2307e2c6b6a1648013fe0af1b1f08ce SHA512 81e4751400d5bae3a0478f94aef6bd4ce6e67d29ac53c2e8aaba043f81473feab1ec2174d975840ead8901def2600a9ba3eb7a8bf5f7908ad7aaef3546230fe6 WHIRLPOOL 95e269ad4b46f649cd512ad8d6bff206b5406280118534a017aac9012bca6774596e2fbb2c3e2f27af327c6321c3b961a1b1ff38f0a79fc580285a39f9f3733a
 EBUILD rsnapshot-1.3.1.ebuild 1372 SHA256 14fe00608e5f6adf7a183747c10b6fff6e62a2fea22e36f79950205073f77deb SHA512 5f50036d750a4d69c5db44cc9e78a4ef5e5282777530da9085c3216ce7daf418ff47213f742914c42cfc3a3aba1a77d91fcf8839698aa9fbd7ee589d4c7fd98e WHIRLPOOL 9dc712f00b974249f6930b18e5e7766863b1e9c112beb915abc41660a87b136d60e84f7ec67a242130432c3a50f718aae9ac3973c4eb622a00b9ee20c3b4e9be
-MISC ChangeLog 8908 SHA256 b4e453f2de6ff930bb6fc1c40c36480bafc1c5c4d141135de7a710683b602dfd SHA512 2e256cf65693a6809ed2b65c81cf2f811ef1c78ba4533dcc6901097604006862bea06fec853ac6339b21da589f2f65e2753f40c7b7b87bd66a2429ff05c04768 WHIRLPOOL f459ef46a689582752e55d7ecd2f7935c02b1ddc018e242b7046a597f8632803abf03adedd91ec546b4dafba859ba13cd650dcd597a036a0b5a06d9ace5fc5c7
+MISC ChangeLog 9022 SHA256 c513c226fbbb6fac2b1b327676c28b26882bd1d1723bc708e1bb2654051b0161 SHA512 fd87b16020892740f4759c6361c0b513b90c143fd3212753d21de9a4f6f8591e3ef8dab6ef0897d29947f600e444b74f5d4bca0db30cc19a6d7338e848e6d1ff WHIRLPOOL fb442161d9e4da00ed7bd253fd67b5be0371047ca82ff5802f9abfe18066ac53e3270e8d944d872250371692c398c44965d3ec396394e2824408d9ca0a46b382
 MISC metadata.xml 424 SHA256 4e0e48b38769c894adc7008c7c8a8bf915ca6325b42a6fb719dce4dcf1788183 SHA512 fe75d936bb634b4afc41fb3c38633a982a6f47f8b2e70ec917743faea0295c0a3b5caea47a927ffa08ada6307b7c3453af4189f0008c21f2df3f71cdd9ca9d32 WHIRLPOOL abd34113034f1326a392db8d3f2fa9280908ac188acb468f9e347d6673c8e1fd70c2e1017654a2ad0ff42579f73f5b7949beaf043f1e5c0fc57465784c67cffe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlOi1oAACgkQA+4Doc5dVOjSTwCeLhNbZTBZIKdZmANFXpK4EE01
-Ba8AniQy74phcsblInJb4/q4U2BYwxQm
-=N5xM
+iJwEAQEIAAYFAlPvpnYACgkQG9wOWsQutdZJQgP/U98GxhjZf6XjPaAlD4KpH/nT
+f3cyDNMRPpCVwFsVzwh9xPjtZgcLqQ2N3vCBWBFUxFV778F4qD6WQ4Da+NHeN2gt
+ykmHJkv7Mqj+kKMuykdaQp9WnanGbd3/sq4rnOJRHindxBDCLVe05tFiTAkiwgIN
+BTCPNZcJQsikeBoLq18=
+=y/Mh
 -----END PGP SIGNATURE-----
