@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lchown/Lchown-1.10.0.ebuild,v 1.3 2014/06/19 12:24:01 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lchown/Lchown-1.10.0.ebuild,v 1.4 2014/08/16 18:44:06 zlogene Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Use the lchown(2) system call from Perl"
 
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 RDEPEND=""
