@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST Lchown-1.01.tar.gz 4018 SHA256 9c0a13e279ad92208fb8fac73001635b0689251dd41b597522e1b3501ba0f76f SHA512 f3b7bf7b3b71a7d92449d4ae8249d76b456869e48105db401a49f39f687ee5d97e079485fb2bbaae991a3a27d408959fc132b843c6f69487eeb2958c85f683a8 WHIRLPOOL 0ca63cbf0eb93dd527dad5b714cb0ecaf9710e5d495eed1470aa9dfd65047cb65b8233c9dd37351d9efefcb973d1cad41bc5a7d2839730a530d4896c7b32b1c5
-EBUILD Lchown-1.10.0.ebuild 468 SHA256 15a4bf6b3ba195cef50bc7f0c670018b3ad9813ff6748eca20d7c3ab7e520987 SHA512 83c1b8a4d2c1c20b4be38aef95100051d4f8e1aeff6e55ec939ede1bc97ab41ca3b978bfb936e6bd63c8f3678c8ebeeda588343862a953fce9500b58ef48789f WHIRLPOOL 26f6ccce945626036ec7c574d94b4c69ac15b6a250b2238339643ab146b8791a79beda7d1c7b399fc0aab0def7ab9944a40b8714ee8b1a7cbb18581e5a18f546
-MISC ChangeLog 1097 SHA256 1f1f5c4d29631deb17044480d3db6784c1c1e96784ec936d61a976277cdc518b SHA512 238d943bff862107ef96964f48b0e22c9a271f24270818f5ec2727d30c94833ccdbeb9a4369453c7eda3148f682257d2ae93dc76011565e96c73dc141dc5d9fe WHIRLPOOL 12bda485363745695797bb89a630bdc5eb697e2d2eefb3c1070a3cc6b5701449befc4bf3629d43ef83f16d1c3cbc71b1ad2da88eee21a240238b5ea02745f15c
+EBUILD Lchown-1.10.0.ebuild 474 SHA256 cbb2f071157872bdcced243c46182929033f212417feee0df6b11b064ad57f4b SHA512 11873a0068d258f23d10318ebe0981324c530b1fc7f7dfc9d774fa78609561fbf0962d8b8128ea69ee19cac75cd39d6ba7b34965753706d983d026b4ca6ec042 WHIRLPOOL a6d59c2e775a5ed0df73738d1dd394a857f1132149691b7a1ec512670a92d81b6228f0f170e7d545f59a90affc4e61adf2ec823215ef357f89f752cb15c9d684
+MISC ChangeLog 1206 SHA256 0069a64cf62d695b1d687abac190f1b6d725f34d5b47e24955346714f72ada3d SHA512 604773ea54d493ee89a6d024ba99feda23f6bd5e7e4a178eb78c2a5d7a6881526f9ec252c92c0f0222b1503a524b29835ea1295a7c46a3a28f546ab2d862f6a3 WHIRLPOOL 060fe01e8df15660a864b813a9aa0b89e0e0d6d398a635304695649f78696569378e8c6f38d495ec6e9c2bcb52727d183a894abacea9ae5cbe4196edb492f063
 MISC metadata.xml 345 SHA256 463c81ccf6ac6798b09dc8cef2ec7f0df0b30550cc30e3a2ddbc73b2c744e586 SHA512 e6b7808e5ce32ef6281e738862b750bcce48a2dc051a9f7920db2604158d40a866fca7eae2573877dcff1b7e9c5ea2fcfde29e898aa8f0bda6cee9a027b86c54 WHIRLPOOL 8725776a3009a4f0f25c2ac2562f6ca37a3bf946309cea0650d285339a93e1a3a939ded0f449fde820106409c76e9918d30009a74384aa76adf0e0b3ecb5772a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlOi1moACgkQA+4Doc5dVOi7WwCfTqaApCHR0XLj1fLouOy83sB4
-aB0AnA+211P/RS8UTH0L8oIuRY5zr6tW
-=W7x3
+iJwEAQEIAAYFAlPvpjQACgkQG9wOWsQutdb/swP/bFkLGtWzbDLucnUtOnbrMe0B
+4Y8w34WKGw7G4HZBiCG7mmMu20MVwedJnVgp52iU/Vkfx/OEQBs/W64kczClzuzz
+v5kH9aUj9MYT0lI6uN0+tOq5WOGkS6Z5zuqZdk+h2CEn9YLUMTKInxFjms4gmJ/Y
+winXOlCOd7zc236+Geo=
+=h/jB
 -----END PGP SIGNATURE-----
