@@ -3,10 +3,10 @@ DEPEND=>=dev-lang/perl-5.8.2 dev-perl/Lchown >=sys-apps/util-linux-2.12-r4 >=sys
 DESCRIPTION=A filesystem backup utility based on rsync
 EAPI=5
 HOMEPAGE=http://www.rsnapshot.org
-KEYWORDS=~alpha ~amd64 ~ppc ~ppc64 ~x86
+KEYWORDS=~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=>=dev-lang/perl-5.8.2 dev-perl/Lchown >=sys-apps/util-linux-2.12-r4 >=sys-apps/coreutils-5.0.91-r4 >=net-misc/openssh-3.7.1_p2-r1 >=net-misc/rsync-2.6.0
 SLOT=0
 SRC_URI=http://www.rsnapshot.org/downloads/rsnapshot-1.3.1.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=7f4c4d89741bd68dde4b409b7a39ea4f
+_md5_=68cab5c4d41cd2e20bdf99119f8d9625
