@@ -3,10 +3,10 @@ DEPEND=virtual/perl-Module-Build || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-
 DESCRIPTION=Use the lchown(2) system call from Perl
 EAPI=4
 HOMEPAGE=http://search.cpan.org/dist/Lchown/
-KEYWORDS=~alpha ~amd64 ~ppc ~ppc64 ~x86
+KEYWORDS=~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
 RDEPEND=|| ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/N/NC/NCLEATON/Lchown-1.01.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=6d3d20bcf5640a69dcdc1ac49ef2e34f
+_md5_=791e298a38f8f40974c96028576208bf
