@@ -12,4 +12,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=ftp://ftp.isc.org/isc/bind9/9.10.0-P2/bind-9.10.0-P2.tar.gz doc? ( mirror://gentoo/dyndns-samples.tbz2 ) sdb-ldap? ( http://ftp.disconnected-by-peer.at/pub/bind-sdb-ldap-1.1.0-fc14.patch.bz2 )
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	db-use	82d0e62839f20e1e0d5a2259abd5316f	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	libtool	52d0e17251d04645ffaa61bfdd858944	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	c820706d8b22c1d0fe215a9d4a47671d	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=64e3af2c0719e13d9638cf4fa28ab55b
+_md5_=052e941087f01aaa07ebcede6ed3f034
