@@ -21,19 +21,19 @@ DIST bind-9.9.5.tar.gz 7729695 SHA256 d4b64c1dde442145a316679acff2df4008aa117ae5
 DIST bind-geoip-1.3-readme.txt 10040 SHA256 380ce89f1a614f46571ad59bddf0f268275691aa2d7a7a7bf1c2a3ef4d26e845 SHA512 463b9c5178cd00b8c3626fafc32e2c4db5005b9442c364525a22a3bd20b6f3ff99fab32e9103355d08546b349398499e221109a96d8d073d1fbe9a1f3d385ae9 WHIRLPOOL a00f0e5564f37b434f84d152e797c249640913e13ab7f109e2ff0abc45c519a28ad24e4f6173fa587c4774653f4c9381f9b8ab33c5697f47b30fa139eed48569
 DIST bind-sdb-ldap-1.1.0-fc14.patch.bz2 9477 SHA256 fe043a573ba187dcc8b0f7313d4408236e6916ec246b0443b7e71b33c8303ae9 SHA512 62690ef3471055e4ae3d8dcedd296c0a5c3a75a3be237c76fdea07aa879f2bb1df4c56b8ca1e3ed9b488a980d16f9c9a3a12a53ef3208607472d18c225916ac5 WHIRLPOOL da3683f815509c5adf0ef819cf1165b64ba35efc6c588fd46b1c6b3d0374766442acb02ecf19dd90bbad5afb174dd27fd3e0894166ea8e78901e95ae870f9f5e
 DIST dyndns-samples.tbz2 22866 SHA256 92fb06a92ca99cbbe96b90bcca229ef9c12397db57ae17e199dad9f1218fdbe8 SHA512 83b0bf99f8e9ff709e8e9336d8c5231b98a4b5f0c60c10792f34931e32cc638d261967dfa5a83151ec3740977d94ddd6e21e9ce91267b3e279b88affdbc18cac WHIRLPOOL 08d4e6a817f1d02597631e18152dbd55ea1bc4c82174be150cc77efc9e1f0f03b6471d1cefbe4229cd3161de752ef232a43ca274a07b78e9c974ceb04cfe99a2
-EBUILD bind-9.10.0_p2.ebuild 12177 SHA256 6de3c1f2ad7184a8983301a06c751235aeeb74118bb09bd77278d1e60c29bea5 SHA512 b0bf83364ace6858d15d84c7b880f41990e5abae99b01b16322a19825f68c0a7f77ba1790237d215e812dcda8186d5e99864669c8f7c0898075b0096fbe5ff9d WHIRLPOOL 923363bd65336485d2045af53e1afb8faa63e0da486b76f67eb802058f2513cfdeec95a563ec7022dbaf7cdfd53be401555a74c4d5c6560ceb44bf3ed97b56d2
+EBUILD bind-9.10.0_p2.ebuild 12153 SHA256 1b85603720eb45dd1324c0e2bb5fbce30fc6c4a253436c65212980d64f5e9e55 SHA512 0f6a690637fb96e39500c5af9d2a2c7ef2bbe51b9e9327984ca5fcf66e6a63f5581a95fa92a8c73427d171c5be7053bea1cd7102b22b93818cc4ac28e77d8f9c WHIRLPOOL 01b7ab0f1460299215215264bc1ef2b8edff1b02cbffa8fe83cde6f7163d922c0878037cf7085f61331654a2ede4573f3a3e8cc51eb0355487466ba0c8b8ce43
 EBUILD bind-9.9.5-r3.ebuild 13831 SHA256 db4518468e066cad4611b3decfa393e086f1f48d3a4942ac7a8f8f47638542ec SHA512 7667abaae2586bc35b63e03d02e42ed61901c7e4ad00b8ade9011cc5e8be64442c2303b741cc78617a3a9b4b936bb7a32a00c213d7436a5fa9bee68cabf9dcdd WHIRLPOOL f9a4cc48cd840c453562c41cf1fea00ff1c224862d3bb7f96017e1faa3b35a2ff45552cdbe8b6b89ba099333f51ebd5b246062c9613aef6bfbf2b6e8c4b76e8c
 EBUILD bind-9.9.5_p1.ebuild 12823 SHA256 8aeb449fce5a3927e1da3dd43df39ab802643fb8869341d005b4224d3970bf8b SHA512 4e4485145c373bb6b187b6c713e77a8aa65ac457a05cfba2df30f18ac3c25b2d37af7f577a08727855e0f4f69ab0722da8647303b580f87fbc0ea38910f2fe88 WHIRLPOOL 29e694f228b1058da09bd399607787a1f0852c935e1412e573513d50c5c377a9aa750b922a22d84e15b68b6936feedcd6eca2b74aac01140ebc3b93572eb6882
-MISC ChangeLog 80281 SHA256 83d9dd0deb414a9b602d8986b5c8706989e8a0bba53a26c3bb0da2b87a3bc193 SHA512 2444bae99ebfb927dd90d354d4e1acf163741f750f643a6356962736371c03e1e5e30185042254c5daa662a64fa502ad8d119c257e40817be45987832d7fdce8 WHIRLPOOL ea4ed92906598055636570427ba0574e2155b8ec0d5f13e75c609c0c85652e7b2fd27c2b427e7d6ee68b76d1e402ed1c6bd3c44986f953f2a4b4beb885bdefd4
+MISC ChangeLog 80392 SHA256 9fedbf4449a9a89faa0ad27d2a86523ebb2ae4a43219808d577c7fa7b7d8fa0e SHA512 55754c47ab52f6e7e02a2afb6a514fa117dd92c86d16e51155564032bf6fa4dfdcf4d9e308001b8414100490ce5234be1603a77bc9ea03531d4455e50ea9c0ee WHIRLPOOL 509a2ff1564fce850877883a42f307616c65698d2ef8003425d5d84e52f24a03be79c2e6864632e73c58bba0a108bcdbe736e871b8ac63bd7bd7faef04ba6ecc
 MISC metadata.xml 990 SHA256 83944dc5d561460b8e06f9117ea79ab33fd9676f25e8199428a8c505c8e7e9f7 SHA512 fd513f335dfa301d5a2cb973f3508e95d2cdd6db8d5af11d9d420690fdb29856f9476f59e13ce4a2e73da39b091cf50b688fea68ef159c3cf10b4dfa8ecba05f WHIRLPOOL 1630de584bb3969e8f2aa48d438a4fb868edf33f007d26baf37cdd0ffac3a7ae81a1d859d68374888e27737d9fd30b96fcad2c241f936b25b5fe4a5e87f45ddc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT7fdvAAoJEMOx0zmdw4Z1uEoIAJoP3CIXs2wYc/OanyugAcnH
-83y4QehEcyBozCzXISV35Y8Er+w9IUc31VBU7YXSQ+3u7GqrvKQt5OvXbzsNGka1
-1L8dxbIj9rxCBo5abOATJzVeF2HW9Fd0CHr7G7gwcEwoVQXluNVMlWvln1z5cvWQ
-VIvcUCsM+q+D8T+u4zHTG222hKXd9Xj6B6g3vyFTRytrTG/LoHs7cWtKQk29KtwF
-bYwe/baAthvLOcQAY6kt3hsXPSjttJqu9pkh4FF/3yvjzgQqWa8A/YMYUz1n12OK
-vqKiTORhi6g1hT3SwvJ/XwMSP5W1PwiJ90kq7fMwjY1qAy3kzzW1NjPZOHyYifA=
-=LNRa
+iQEcBAEBCAAGBQJT76QCAAoJEMOx0zmdw4Z1p1QIAJc128MAOVxSkNTpQ58vFIuv
+BBNfcuxFiPNlEurCOjBE89qaPmeOP37ua3Kbg7ACEGfH6j6LuUaWLnld1BSCRV62
+rY9nH4K1k8C5QmOf+rRlPav+TenmUCw1THarvTWxjrJI0H7GhK05j51Xp0hUQdEU
+lvV1Xkp44dJSo+Yvg2vRXmGHMXB4sVdEb8OKSSN38kX1lHZbuat/YCrRiQt6UTMA
+B+XEd36ldbKYKxCAAdtES9TTmiYrNFB2bPFn/PAjX97fSXyaDVEXRLg4kYs0wi/i
+8/phFnEZpE/zQxLfwCS5j8VzhFS7nz7J8w93BbFXsLZLr0ij0k/JpytRtl+gsqk=
+=BEpt
 -----END PGP SIGNATURE-----
