@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Lchown
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lchown/ChangeLog,v 1.8 2014/06/19 12:24:01 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lchown/ChangeLog,v 1.9 2014/08/16 18:44:06 zlogene Exp $
+
+  16 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> Lchown-1.10.0.ebuild:
+  Add ~sparc keyword wrt bug #467160
 
   19 Jun 2014; Tobias Klausmann <klausman@gentoo.org> Lchown-1.10.0.ebuild:
   Keyworded on alpha, bug #467160
