@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/rsnapshot
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/rsnapshot/ChangeLog,v 1.39 2014/06/19 12:24:18 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/rsnapshot/ChangeLog,v 1.40 2014/08/16 18:45:11 zlogene Exp $
+
+  16 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> rsnapshot-1.3.1-r2.ebuild:
+  Add ~sparc keyword wrt bug #467160
 
   19 Jun 2014; Tobias Klausmann <klausman@gentoo.org>
   rsnapshot-1.3.1-r2.ebuild:
